--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Golden Triangle Tours
+                  Tours
                 </a>
                 <ul class="dropdown-menu">
                   <!-- With Pushkar link -->
