--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Golden Triangle Tours
+                  Tours
                 </a>
                 <ul class="dropdown-menu">
                   <!-- With Pushkar link -->
